--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -14,7 +14,11 @@ jobs:
     # Download our master branch
     steps:
     - uses: actions/checkout@v2
-
+    
     # Run our deployment command
+    
+    - name: Deploying the static website to gh-pages
+      run: yarn install
+    
     - name: Deploying the static website to gh-pages
       run: yarn deploy
