--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -18,7 +18,7 @@ jobs:
     # Run our deployment command
     
     - name: Deploying the static website to gh-pages
-      run: yarn install
+      run: npm ci
     
     - name: Deploying the static website to gh-pages
       run: yarn deploy
